# track-and-visualize

./: .gitignore  LICENSE  MANIFEST.in  README.md  dev  development.md  requirements-dev.txt  requirements-jax.txt  requirements-torch.txt  requirements.txt  setup.cfg  setup.py
docs/tandv/: index.html
example-notebooks/: .gitignore  interactive-viz.ipynb  jax-tracking.ipynb  torch-tracking.ipynb
examples/: interactive-vis.ipynb  jax-track.ipynb  static-vis.ipynb  torch-track.ipynb
interactive/: interactive-exp.ipynb  multi-fig-interactive.ipynb
notebooks/: data-exploration.ipynb  histogram-plots.ipynb  lib-demo.ipynb  pd-explorations.ipynb  scalar-plotting.ipynb  seaborn-explorations.ipynb  torch-logging-exploration.ipynb  visualisation-ideation.ipynb
notes/: data-model.md  logging-todo.md  visualisation-todo.md
nvis/: _config.py
nvis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
nvis/log/: __init__.py
nvis/tests/: test_reads.py  test_stashes.py  test_stashes_flax.py  test_stashes_jax.py  test_stashes_torch.py  test_stashfns_jax.py  test_stashfns_torch.py
nvis/vis/: __init__.py  _crosshair.py  _errors.py  _facet.py  _interact.py  _plots.py  _toolbars.py  _transform.py  _widget_holder.py
profiling-logging-overhead/: simple-test.py
profiling-logging-overhead/notebooks/: analysing-benchmarks.ipynb
profiling-logging-overhead/numerics-llama.c/: .gitignore  (+5 more)
src/: _transform.py  transform.py
tandv/: __init__.py  _config.py
tests/: test_reads.py  test_stashes_jax.py  test_stashes_torch.py  test_stashfns_jax.py  test_stashfns_torch.py
(+82 files in other folders)
