[metadata]
name = tandv
author = Graphcore Research
description = Track And Visualize library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/graphcore-research/track-and-visualize/
license = MIT license
classifiers =
    Programming Language :: Python :: 3

[mypy-setuptools.*]
ignore_missing_imports = True

[isort]
profile = black

[tool:pytest]
addopts = --no-cov-on-fail

[flake8]
# See https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html
max-line-length = 88
extend-ignore = E203,E731

[coverage:report]
skip_covered = true
show_missing = true
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    assert False
